--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section id="container">
         <!--Primeira Prgunta-->
         <article class="Cartao">
-            <div class="Cartao__">
+            <div class="Cartao__Conteudo">
                 <h3>Hitoria</h3>
                 <div class="Cartao_Conteudo_Pergunta">
-                    <p></p>
+                    <p>Em que ano ocorreu a primeira guerra mundial?</p>
                 </div>
             </div>
         </article>
