--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,19 +9,34 @@
 </head>
 
 <body>
-<main> 
-    <section id="container">
-        <!--Primeira Prgunta-->
-        <article class="Cartao">
-            <div class="Cartao__Conteudo">
-                <h3>Hitoria</h3>
-                <div class="Cartao_Conteudo_Pergunta">
-                    <p>Em que ano ocorreu a primeira guerra mundial?</p>
+    <main>
+        <section id="container">
+            <!--Primeira Prgunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Hitoria</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Em que ano ocorreu a primeira guerra mundial?</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>1914 a 1918</p>
+                    </div>
                 </div>
-            </div>
-        </article>
-    
-    </section>
-</main>    
+            </article>
+             <!--Segunda Prgunta-->
+             <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Hitoria</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Onde ocorreu a Guerra de Canudos?</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>No sertão nordestino</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
+
 </html>
