--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="container">
-            <!--Primeira Prgunta-->
+            <!--Primeira Pergunta-->
             <article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Hitoria</h3>
@@ -23,8 +23,8 @@
                     </div>
                 </div>
             </article>
-             <!--Segunda Prgunta-->
-             <article class="Cartao">
+            <!--Segunda Pergunta-->
+            <article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Hitoria</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -32,6 +32,135 @@
                     </div>
                     <div class="Cartao__Conteudo_Resposta">
                         <p>No sertão nordestino</p>
+                    </div>
+                </div>
+            </article>
+            <!--Terceira Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Hitoria</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Quem era o líder religioso da Guerra de Canudos?</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>João Antonio</p>
+                    </div>
+                </div>
+            </article>
+            <!--Quarta Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Matemática</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Qual é o nome do maior lado do triângulo retângulo?</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Hipotenusa</p>
+                    </div>
+                </div>
+            </article>
+            <!--Quinta Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Sociologia</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Segundo Émile Durkheim (1858-1917), as três principais características do Fato Social são:
+                        </p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>A generalidade, a exterioridade e a coercitividade.</p>
+                    </div>
+                </div>
+            </article>
+            <!--Sexta Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Biologia</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Pares de genes, com segregação independente podem agir, conjuntamente, na determinação de uma
+                            mesma característica fenotípica. Este fenômeno é conhecido como:</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>interação gênica.</p>
+                    </div>
+                </div>
+            </article>
+            <!--Setima Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Português</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>A palavra "anistia" tem relação com:</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Perdão.</p>
+                    </div>
+                </div>
+            </article>
+            <!--Oitava Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Português</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Uma pessoa altruísta é aquela que...</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>gosta de ajudar, é generosa .</p>
+                    </div>
+                </div>
+            </article>
+            <!--Nona Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Português</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Leniência é uma palavra que significa...</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Agradável</p>
+                    </div>
+                </div>
+            </article>
+            <!--Decima Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Sociologia</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>É a condição material dos indivíduos que determinaria os demais aspectos de sua vida. A
+                            importância dada por Marx a esse quesito de nossas vidas é justificada, segundo sua teoria,
+                            em razão do impacto que a situação econômica de um sujeito tem em sua trajetória de
+                            formação.
+                            Essa linha de pensamento é chamada de:</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Materialismo Histórico</p>
+                    </div>
+                </div>
+            </article>
+            <!--Decima primeira Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Sociologia</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Para Marx, o capital era o principal ponto a ser investigado para que fosse possível entender
+                            as mudanças sociais que surgem em um dado momento. Entende-se por capital:</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Qualquer bem que possa ser investido para gerar mais lucro</p>
+                    </div>
+                </div>
+            </article>
+            <!--Decima segunda Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Biologia</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>A produção de insulina pela técnica do DNA recombinante tem impacto favorável na saúde de
+                            indivíduos:
+                        </p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Diabéticos</p>
                     </div>
                 </div>
             </article>
