--- a/index.html
+++ b/index.html
@@ -164,8 +164,31 @@
                     </div>
                 </div>
             </article>
+            <!--Decima terceira Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Programação</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>O que e JavaScrip</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>O Javascript é uma linguagem de programação</p>
+                    </div>
+                </div>
+            </article>
+            <!--Decima quarta Pergunta-->
+            <article class="Cartao">
+                <div class="Cartao__Conteudo">
+                    <h3>Eduação Finanaceira</h3>
+                    <div class="Cartao_Conteudo_Pergunta">
+                        <p>Qual é a moeda da indonésia?</p>
+                    </div>
+                    <div class="Cartao__Conteudo_Resposta">
+                        <p>Rupia indonésia</p>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
 </body>
-
 </html>
