--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!--Primeira Pergunta-->
             <article class="Cartao">
                 <div class="Cartao__Conteudo">
-                    <h3>Hitoria</h3>
+                    <h3>Historia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
                         <p>Em que ano ocorreu a primeira guerra mundial?</p>
                     </div>
@@ -26,7 +26,7 @@
             <!--Segunda Pergunta-->
             <article class="Cartao">
                 <div class="Cartao__Conteudo">
-                    <h3>Hitoria</h3>
+                    <h3>Historia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
                         <p>Onde ocorreu a Guerra de Canudos?</p>
                     </div>
@@ -38,7 +38,7 @@
             <!--Terceira Pergunta-->
             <article class="Cartao">
                 <div class="Cartao__Conteudo">
-                    <h3>Hitoria</h3>
+                    <h3>Historia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
                         <p>Quem era o líder religioso da Guerra de Canudos?</p>
                     </div>
