--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <!--Decima quarta Pergunta-->
             <article class="Cartao">
                 <div class="Cartao__Conteudo">
-                    <h3>Eduação Finanaceira</h3>
+                    <h3>Educação Financeira</h3>
                     <div class="Cartao_Conteudo_Pergunta">
                         <p>Qual é a moeda da indonésia?</p>
                     </div>
