--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section id="container">
             <!--Primeira Pergunta-->
-            <article class="Cartao">
+           <!-- <article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>História</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -22,9 +22,9 @@
                         <p>1914 a 1918</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Segunda Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>História</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -34,9 +34,9 @@
                         <p>No sertão nordestino</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Terceira Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>História</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -46,9 +46,9 @@
                         <p>João Antonio</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Quarta Pergunta-->
-            <article class="Cartao">
+           <!-- <article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Matemática</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -58,9 +58,9 @@
                         <p>Hipotenusa</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Quinta Pergunta-->
-            <article class="Cartao">
+           <!-- <article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Sociologia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -71,9 +71,9 @@
                         <p>A generalidade, a exterioridade e a coercitividade.</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Sexta Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Biologia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -84,9 +84,9 @@
                         <p>interação gênica.</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Setima Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Português</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -96,9 +96,9 @@
                         <p>Perdão.</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Oitava Pergunta-->
-            <article class="Cartao">
+           <!-- <article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Português</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -108,9 +108,9 @@
                         <p>gosta de ajudar, é generosa .</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Nona Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Português</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -120,9 +120,9 @@
                         <p>Agradável</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Decima Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Sociologia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -136,9 +136,9 @@
                         <p>Materialismo Histórico</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Decima primeira Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Sociologia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -149,9 +149,9 @@
                         <p>Qualquer bem que possa ser investido para gerar mais lucro</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Decima segunda Pergunta-->
-            <article class="Cartao">
+           <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Biologia</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -163,9 +163,9 @@
                         <p>Diabéticos</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Decima terceira Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Programação</h3>
                     <div class="Cartao_Conteudo_Pergunta">
@@ -175,9 +175,9 @@
                         <p>O Javascript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
             <!--Decima quarta Pergunta-->
-            <article class="Cartao">
+            <!--<article class="Cartao">
                 <div class="Cartao__Conteudo">
                     <h3>Educação Financeira</h3>
                     <div class="Cartao_Conteudo_Pergunta">
