--- a/index.html
+++ b/index.html
@@ -187,8 +187,13 @@
                         <p>Rupia indonésia</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
         </section>
     </main>
+    <footer>
+        <script src="app.js"></script>
+        <script src="perguntas.js"></script>
+    </footer>
 </body>
+
 </html>
