--- a/index.html
+++ b/index.html
@@ -191,9 +191,10 @@
         </section>
     </main>
     <footer>
+        <p>Projeto desenvolvimento nas aulas do 2D- wILSON Joffre</p>
+        </footer>
         <script src="app.js"></script>
         <script src="perguntas.js"></script>
     </footer>
 </body>
-
 </html>
